Fixed issue where large banners could stretch page in the horz direction.

--- a/ISS/static-src/src/base/base.less
+++ b/ISS/static-src/src/base/base.less
@@ -28,6 +28,7 @@ input {
 
   .banner {
     margin: 10px 0;
+    max-width: 100%;
   }
 }
 
